cambios de linkeo

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div class="container">
         <p class="logo">BurguerBull</p>
         <nav class="navbar">
-          <a href="/pages/Sobre-nosotros.html">Sobre nostros</a>
-          <a href="/pages/Producto.html">Productos</a>
-          <a href="/pages/Promos.html">Promos</a>
-          <a href="/pages/Contacto.html">Contacto</a>
+          <a href="pages/Sobre-nosotros.html">Sobre nostros</a>
+          <a href="pages/Producto.html">Productos</a>
+          <a href="pages/Promos.html">Promos</a>
+          <a href="pages/Contacto.html">Contacto</a>
         </nav>
       </div>
     </header>
