--- a/pages/Sobre-nosotros.html
+++ b/pages/Sobre-nosotros.html
@@ -11,12 +11,12 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" href="/index.html">BurguerBull</a>
+        <a class="logo" href="../index.html">BurguerBull</a>
         <nav class="navbar">
-          <a href="/pages/Sobre-nosotros.html">Sobre nostros</a>
-          <a href="/pages/Producto.html">Productos</a>
-          <a href="/pages/Promos.html">Promos</a>
-          <a href="/pages/Contacto.html">Contacto</a>
+          <a href="Sobre-nosotros.html">Sobre nostros</a>
+          <a href="Producto.html">Productos</a>
+          <a href="Promos.html">Promos</a>
+          <a href="Contacto.html">Contacto</a>
         </nav>
       </div>
     </header>
