--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,6 +7,12 @@
     <title>Productos</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -23,17 +29,19 @@
     <main>
       <section id="formulario">
         <div class="container">
-          <form action="">
-            <h2>Contacto</h2>
-            <input type="text" name="Nombre" placeholder="Nombre" />
-            <input type="text" name="Correo" placeholder="Correo" />
-            <input type="text" name="Telefono" placeholder="Telefono" />
-            <textarea
-              name="Mensaje"
-              placeholder="Escriba aquí su mensaje"
-            ></textarea>
-            <input type="button" value="ENVIAR" id="boton" />
-          </form>
+          <div class="g-col-12">
+            <form action="">
+              <h2>Contacto</h2>
+              <input type="text" name="Nombre" placeholder="Nombre" />
+              <input type="text" name="Correo" placeholder="Correo" />
+              <input type="text" name="Telefono" placeholder="Telefono" />
+              <textarea
+                name="Mensaje"
+                placeholder="Escriba aquí su mensaje"
+              ></textarea>
+              <input type="button" value="ENVIAR" id="boton" />
+            </form>
+          </div>
         </div>
       </section>
     </main>
