--- a/pages/Producto.html
+++ b/pages/Producto.html
@@ -7,6 +7,12 @@
     <title>Productos</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -22,56 +28,74 @@
     </header>
     <main>
       <section id="main-productos">
-        <div class="container">
+        <div class="container text-center">
           <h2>Nuestros Productos</h2>
-          <div class="menu">
-            <div class="card">
-              <h3>Burguer 1</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Magnam, provident. Optio debitis eligendi.
-              </p>
-              <button>+ Info</button>
+          <div class="row row-cols-3">
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/burger-1.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card">
-              <h3>Burguer 2</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Magnam, provident. Optio debitis eligendi.
-              </p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/burger-2.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card">
-              <h3>Burguer 3</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Magnam, provident. Optio debitis eligendi.
-              </p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/burger-3.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card">
-              <h3>Lomo 1</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Magnam, provident. Optio debitis eligendi.
-              </p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/lomo-1.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card">
-              <h3>Lomo 2</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Magnam, provident. Optio debitis eligendi.
-              </p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/lomo-2.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card">
-              <h3>Lomo 3</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Magnam, provident. Optio debitis eligendi.
-              </p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/lomo-3.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
           </div>
         </div>
