--- a/pages/Promos.html
+++ b/pages/Promos.html
@@ -7,6 +7,12 @@
     <title>Productos</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -22,23 +28,41 @@
     </header>
     <main>
       <section id="main-promos">
-        <div class="container">
-          <h2>Promos</h2>
-          <div class="promociones">
-            <div class="card-promo">
-              <h3>Promo 1</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button>+ Info</button>
+        <div class="container text-center">
+          <h2>Promociones</h2>
+          <div class="row row-cols-3">
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/2-1-01.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card-promo">
-              <h3>Promo 2</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/3-1-01.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
-            <div class="card-promo">
-              <h3>Promo 3</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-              <button>+ Info</button>
+            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+              <img src="../imgs/3-2-01.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
           </div>
         </div>
