--- a/pages/Sobre-nosotros.html
+++ b/pages/Sobre-nosotros.html
@@ -7,6 +7,12 @@
     <title>Productos</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -23,13 +29,18 @@
     <main>
       <section id="main-nosotros">
         <div class="container">
-          <h1>Sobre <span class="color-acento">Nosotros</span></h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            et doloremque, quasi provident fugiat laboriosam fuga voluptate
-            consectetur quia ullam soluta, sit vitae? Accusantium quis saepe
-            ipsa assumenda! Minus, deleniti!
-          </p>
+          <div class="imagen-nosotros">
+            <img src="../imgs/2-1-01.jpg" />
+          </div>
+          <div class="texto">
+            <h1>Sobre <span class="color-acento">Nosotros</span></h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos et doloremque, quasi provident fugiat laboriosam fuga
+              voluptate consectetur quia ullam soluta, sit vitae? Accusantium
+              quis saepe ipsa assumenda! Minus, deleniti!
+            </p>
+          </div>
         </div>
       </section>
     </main>
