--- a/pages/Sobre-nosotros.html
+++ b/pages/Sobre-nosotros.html
@@ -28,18 +28,24 @@
     </header>
     <main>
       <section id="main-nosotros">
-        <div class="container">
-          <div class="imagen-nosotros">
-            <img src="../imgs/2-1-01.jpg" />
-          </div>
-          <div class="texto">
-            <h1>Sobre <span class="color-acento">Nosotros</span></h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos et doloremque, quasi provident fugiat laboriosam fuga
-              voluptate consectetur quia ullam soluta, sit vitae? Accusantium
-              quis saepe ipsa assumenda! Minus, deleniti!
-            </p>
+        <div class="container text-center">
+          <div class="row row-cols-2">
+            <div class="imagen-nosotros">
+              <img
+                src="../imgs/sobre-nosotros.jpeg"
+                class="img-fluid"
+                alt="..."
+              />
+            </div>
+            <div>
+              <h1>Sobre <span class="color-acento">Nosotros</span></h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos et doloremque, quasi provident fugiat laboriosam
+                fuga voluptate consectetur quia ullam soluta, sit vitae?
+                Accusantium quis saepe ipsa assumenda! Minus, deleniti!
+              </p>
+            </div>
           </div>
         </div>
       </section>
