--- a/pages/Producto.html
+++ b/pages/Producto.html
@@ -31,7 +31,7 @@
         <div class="container text-center">
           <h2>Nuestros Productos</h2>
           <div class="row row-cols-3">
-            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+            <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
               <img src="../imgs/burger-1.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -42,7 +42,7 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
-            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+            <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
               <img src="../imgs/burger-2.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -53,7 +53,7 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
-            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+            <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
               <img src="../imgs/burger-3.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -64,7 +64,7 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
-            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+            <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
               <img src="../imgs/lomo-1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -75,7 +75,7 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
-            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+            <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
               <img src="../imgs/lomo-2.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -86,7 +86,7 @@
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
-            <div class="card text-dark bg-light mb-3" style="width: 18rem">
+            <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
               <img src="../imgs/lomo-3.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
