se agrega SEO, correccion de footer, se coloca los imports y se agregan detalles

--- a/pages/Sobre-nosotros.html
+++ b/pages/Sobre-nosotros.html
@@ -34,16 +34,16 @@
               <img
                 src="../imgs/sobre-nosotros.jpeg"
                 class="img-fluid"
-                alt="..."
+                alt="Conoce mas acerca de nosotros Burguerbull"
               />
             </div>
             <div>
               <h1>Sobre <span class="color-acento">Nosotros</span></h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dignissimos et doloremque, quasi provident fugiat laboriosam
-                fuga voluptate consectetur quia ullam soluta, sit vitae?
-                Accusantium quis saepe ipsa assumenda! Minus, deleniti!
+                Nosotros somos amantes de las hamburguesas que decidimos hacer
+                realidad nuestro sueño y crear nuestras propias creaciones. Todo
+                comenzó como un proyecto casero que escalo a toda la provincia
+                de Córdoba.
               </p>
             </div>
           </div>
