--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Las mejores hamburguesas de la region de Córdoba"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -39,10 +43,8 @@
         <div class="container">
           <h1 class="animate__animated animate__bounce">BurguerBull</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            et doloremque, quasi provident fugiat laboriosam fuga voluptate
-            consectetur quia ullam soluta, sit vitae? Accusantium quis saepe
-            ipsa assumenda! Minus, deleniti!
+            Bienvenidos a BurguerBull, casa de las mejores habmurguesas de la
+            región de Córdoba!
           </p>
           <button>ORDENAR</button>
         </div>
