--- a/pages/Producto.html
+++ b/pages/Producto.html
@@ -32,69 +32,93 @@
           <h2>Nuestros Productos</h2>
           <div class="row row-cols-3">
             <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
-              <img src="../imgs/burger-1.jpeg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/burger-1.jpeg"
+                class="card-img-top"
+                alt="Combo burguerbull 1"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">BurguerBull</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Hamburguesa de 150g con chedar, tomate, lechuga, huevo frito,
+                  salsa, acompañada de papas y gaseosa.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
-              <img src="../imgs/burger-2.jpeg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/burger-2.jpeg"
+                class="card-img-top"
+                alt="Combo burguerbull 2"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Megabull</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Hamburguesa de 200g con provolone, tomate, palta, huevo frito,
+                  salsa, acompañada de papas y gaseosa.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
-              <img src="../imgs/burger-3.jpeg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/burger-3.jpeg"
+                class="card-img-top"
+                alt="Combo burguerbull 3"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Superbull</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Hamburguesa de 150g con sardo, cebolla caramelizada, huevo
+                  frito, salsa, acompañada de papas y gaseosa.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
-              <img src="../imgs/lomo-1.jpg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/lomo-1.jpg"
+                class="card-img-top"
+                alt="Combo lomobull 1"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Lomobull tasty</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Lomo con chedar, jamón, tomate, lechuga, huevo frito, salsa,
+                  acompañada de papas y gaseosa.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
-              <img src="../imgs/lomo-2.jpg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/lomo-2.jpg"
+                class="card-img-top"
+                alt="Combo lomobull 2"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Lomobull porter</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Lomo con chedar, tomate, cebolla, lechuga, huevo frito, pala,
+                  salsa, acompañada de papas y gaseosa.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3 col" style="width: 19rem">
-              <img src="../imgs/lomo-3.jpg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/lomo-3.jpg"
+                class="card-img-top"
+                alt="Combo lomobull 3"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Lomobull pollo</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Lomo de pollo, con provolone, tomate, lechuga, huevo frito,
+                  salsa, acompañada de papas y gaseosa.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
           </div>
