--- a/pages/Promos.html
+++ b/pages/Promos.html
@@ -32,36 +32,45 @@
           <h2>Promociones</h2>
           <div class="row row-cols-3">
             <div class="card text-dark bg-light mb-3" style="width: 18rem">
-              <img src="../imgs/2-1-01.jpg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/2-1-01.jpg"
+                class="card-img-top"
+                alt="Combo 2x1 Burguerbull"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Combo 2x1</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Promo 2 Mega bull y papas grandes y gaseosa 2x1.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3" style="width: 18rem">
-              <img src="../imgs/3-1-01.jpg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/3-1-01.jpg"
+                class="card-img-top"
+                alt="Combo 3x1 Buguerbull"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Combo 3x1</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Promo 3 Lomobull de pollo y papas regular 3x1.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
             <div class="card text-dark bg-light mb-3" style="width: 18rem">
-              <img src="../imgs/3-2-01.jpg" class="card-img-top" alt="..." />
+              <img
+                src="../imgs/3-2-01.jpg"
+                class="card-img-top"
+                alt="Combo 3x2 Buguerbull"
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Combo 3x2</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Combo 3 Buguerbull especial con papas y gaseosa grande 3x2.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Pedir ya!</a>
               </div>
             </div>
           </div>
