se agregaron correciones finales

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Las mejores hamburguesas de la region de Córdoba"
     />
+    <meta name="keywords" content="habmurguesas, cordoba, fastfood" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
