--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -29,6 +29,7 @@
     <main>
       <section id="formulario">
         <div class="container">
+          <h1>Contacta con nosotros</h1>
           <div class="g-col-12">
             <form action="">
               <h2>Contacto</h2>
